--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         </header>
         <section class="section-1">
             <div class="texto-section-1">
-                <h2>
-                    Product
-                </h2>
-                <h2>
-                    Page
-                </h2>   
+                <div class="title-section-1">
+                    <h2 >
+                        Product
+                    </h2>
+                    <h2>
+                        Page
+                    </h2>
+                </div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod in deleniti accusantium cupiditate iusto.
                 </p>
@@ -59,10 +61,12 @@
             <div class="content">
                 <img src="images/laptop.png" alt="">
                 <div class="text-content">
-                    <div class="div-alpha">                    <h3>Alpha Screenshot</h3>
+                    <div class="div-alpha">
+                        <h3>Alpha Screenshot</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptatem laboriosam in eveniet optio dicta. Reiciendis sed fugit, molestiae quis voluptas blanditiis maxime repellendus deleniti? Molestiae non eos explicabo corrupti!</p></div>
                     <div class="div-market">
-                        <div class="div-market-txt">                        <span class="material-symbols-outlined">
+                        <div class="div-market-txt">
+                            <span class="material-symbols-outlined">
                             remove
                         </span>
                         <p class="market"> Marketing Page </p></div>
