--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="menu-header">
                 <ul>
                     <li><a href="#">About</a></li> 
-                    <li><a href="#">Features</a></li>
+                    <li><a href="features.html">Apptastico</a></li>
                     <li><a href="#">Use case</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><button>Download</button></li>
